design home, about and contact

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,8 @@
-<div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
-</div>
+<!-- Footer -->
+<footer class="py-5 bg-primary">
+    <div class="container">
+        <p jhiTranslate="footer">This is your footer</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+</footer>
