--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -6,5 +6,7 @@
     <div class="card jh-card">
         <router-outlet></router-outlet>
     </div>
+</div>
+<div>
     <jhi-footer></jhi-footer>
 </div>
