add divider in home, about and contact

--- a/src/main/webapp/app/contact/contact.component.html
+++ b/src/main/webapp/app/contact/contact.component.html
@@ -5,9 +5,7 @@
 <div class="container">
 
   <!-- Page Heading/Breadcrumbs -->
-  <h1 class="mt-4 mb-3">Contact
-    <small>Subheading</small>
-  </h1>
+  <h1 class="mt-4 mb-3">Contact</h1>
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
@@ -46,6 +44,11 @@
     </div>
   </div>
   <!-- /.row -->
+
+  <!-- Solid divider -->
+  <div class="mb-4">
+    <hr class="solid">
+  </div>
 
   <!-- Contact Form -->
   <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
