--- a/src/main/webapp/app/about-us/about-us.component.html
+++ b/src/main/webapp/app/about-us/about-us.component.html
@@ -5,9 +5,7 @@
 <div class="container">
 
   <!-- Page Heading/Breadcrumbs -->
-  <h1 class="mt-4 mb-3">About
-    <small>Subheading</small>
-  </h1>
+  <h1 class="mt-4 mb-3">About</h1>
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
@@ -34,6 +32,11 @@
     </div>
   </div>
   <!-- /.row -->
+
+  <!-- Solid divider -->
+  <div class="mb-4">
+    <hr class="solid">
+  </div>
 
   <!-- Team Members -->
   <h2>Our Team</h2>
@@ -83,6 +86,11 @@
     </div>
   </div>
   <!-- /.row -->
+
+  <!-- Solid divider -->
+  <div class="mb-4">
+    <hr class="solid">
+  </div>
 
   <!-- Our Customers -->
   <h2>Our Customers</h2>
