--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -110,11 +110,16 @@
         </div>
         <!-- /.row -->
 
+        <!-- Solid divider -->
+        <div class="mb-4">
+            <hr class="solid">
+        </div>
+
         <!-- Portfolio Section -->
         <h2>Portfolio Heading</h2>
 
         <div class="row">
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -127,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -139,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -152,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -164,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -176,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="col-lg-4 col-sm-6 mb-4 portfolio-item">
                 <div class="card border-dark h-100">
                     <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                     <div class="card-body">
@@ -192,8 +197,13 @@
         </div>
         <!-- /.row -->
 
+        <!-- Solid divider -->
+        <div class="mb-4">
+            <hr class="solid">
+        </div>
+
         <!-- Features Section -->
-        <div class="row">
+        <div class="row mb-4">
             <div class="col-lg-6">
                 <h2>Modern Business Features</h2>
                 <p>The Modern Business template by Start Bootstrap includes:</p>
@@ -207,7 +217,8 @@
                     <li>Unstyled page elements for easy customization</li>
                 </ul>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id
-                    reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia
+                    reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis
+                    quia
                     dolorum ducimus unde.</p>
             </div>
             <div class="col-lg-6">
@@ -215,8 +226,6 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <hr>
 
         <!-- Call to Action Section -->
         <div class="row mb-4">
